--- a/stockcollection/src/main/resources/templates/stock/stock_hsl.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_hsl.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../../css/templatemo-style.css">
-    <title>KDJ区间</title>
+    <title>换手率</title>
     <script src="../../js/common.js"></script>
 </head>
 
@@ -31,57 +31,37 @@
 
             <!--<div class="row"> -->
             <form method="post" name="contact-form" class="contact-form">
+
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="form-group">
-                        <input name="spjmin" type="text" class="form-control" id="spjmin" placeholder="最低收盘价..."
-                               required>
+                        <input name="spjmin" type="text" class="form-control" id="spjmin" placeholder="最低收盘价..." value="0">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
                     <div class="form-group contact-field">
-                        <input name="spjmax" type="text" class="form-control" id="spjmax" placeholder="最高收盘价..." >
+                        <input name="spjmax" type="text" class="form-control" id="spjmax" placeholder="最高收盘价..." value="12">
                     </div>
                 </div>
 
-                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <div class="form-group contact-field">
-                        <input name="kvaluemin" type="text" class="form-control" id="kvaluemin" placeholder="最低K值..." value="0.01" >
+
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="form-group">
+                        <input name="hslmin" type="text" class="form-control" id="hslmin" placeholder="最低换手率..." value="10">
                     </div>
                 </div>
-
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
                     <div class="form-group contact-field">
-                        <input name="kvaluemax" type="text" class="form-control" id="kvaluemax" placeholder="最高K值..." value="15" >
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <div class="form-group contact-field">
-                        <input name="dvaluemin" type="text" class="form-control" id="dvaluemin" placeholder="最低D值..." value="0.01" >
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <div class="form-group contact-field">
-                        <input name="dvaluemax" type="text" class="form-control" id="dvaluemax" placeholder="最高D值..." value="15" >
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <div class="form-group contact-field">
-                        <input name="jvaluemin" type="text" class="form-control" id="jvaluemin" placeholder="最低J值..." value="0.01" >
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <div class="form-group contact-field">
-                        <input name="jvaluemax" type="text" class="form-control" id="jvaluemax" placeholder="最高J值..." value="15" >
+                        <input name="hslmax" type="text" class="form-control" id="hslmax" placeholder="最高换手率..." value="100">
                     </div>
                 </div>
 
 
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="form-group margin-b-0">
+
+
+
+
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding-left: 0px !important;">
+                        <div class="form-group margin-b-0">
                         <button type="button" id="form-submit" class="btn no-bg btn-contact" onclick="getNominate()">查询</button>
                     </div>
                 </div>
@@ -97,7 +77,6 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>编号</th>
                     <th>stockCode</th>
                     <th>收盘价</th>
                     <th>涨跌幅</th>
@@ -108,7 +87,7 @@
                     <th>时间</th>
                     <th>综合</th>
                     <th>MACD</th>
-                    <th>价格</th>
+                    <th>cci</th>
                     <th>影响</th>
                 </tr>
                 </thead>
@@ -143,50 +122,18 @@
 
     function getNominate() {
 
-        var spjminVal = $("#spjmin").val();
-        var spjmaxVal = $("#spjmax").val();
-
-        var dvaluemin = $("#dvaluemin").val();
-        var dvaluemax = $("#dvaluemax").val();
-
-        // var spjminVal = $("#spjmin").val();
-        // var spjmaxVal = $("#spjmax").val();
-        //
-        // var spjminVal = $("#spjmin").val();
-        // var spjmaxVal = $("#spjmax").val();
-
-        if (spjminVal==""||spjminVal==null) {
-            spjminVal=0;
-            $("#spjmin").val(spjminVal);
-        }
-        if (spjmaxVal==""||spjmaxVal==null) {
-            spjmaxVal=spjminVal+15;
-            $("#spjmax").val(spjmaxVal);
-        }
-
-        if (dvaluemin==""||dvaluemin==null) {
-            dvaluemin=0.01;
-            $("#dvaluemin").val(dvaluemin);
-        }
-        if (dvaluemax==""||dvaluemax==null) {
-            dvaluemax=dvaluemin+20;
-            $("#dvaluemax").val(dvaluemax);
-        }
-
-
-        var str = {"spjmin": $("#spjmin").val(), "spjmax": $("#spjmax").val(), "kvaluemin": $("#kvaluemin").val(), "kvaluemax": $("#kvaluemax").val(), "dvaluemin": $("#dvaluemin").val(), "dvaluemax": $("#dvaluemax").val(), "jvaluemin": $("#jvaluemin").val(), "jvaluemax": $("#jvaluemax").val()}
-
+        var str = { "spjmin": $("#spjmin").val(), "spjmax": $("#spjmax").val(), "hslmin": $("#hslmin").val(),  "hslmax": $("#hslmax").val()}
 
         $.ajax({
             type: "post",
             async: true,
-            url: "/stock/getStockKdjValueRegion",
+            url: "/stock/getStockHslValueRegion",
             data: JSON.stringify(str),
             dataType: "text",        //返回数据形式为json
             contentType: "application/json",
             success: function (result) {
 
-                console.log(result)
+                // console.log(result)
 
                 var jsonObj = JSON.parse(result);//转换为json对象
 
@@ -196,18 +143,17 @@
                     var tempdate =jsonObj[i].stockDate;
                     tempdate = tempdate.replace("00:00:00.0","")
                     temphtml += "<tr>";
-                    temphtml +="<td>"+i+"</td>"
                     temphtml += "<td><a target='_blank' href='/stock/toStockInfoList?stockCode="+jsonObj[i].stockCode+"'>" + jsonObj[i].stockCode + "</a></td>";
                     temphtml += "<td>" + jsonObj[i].spj + "</td>";
                     temphtml += "<td>" + jsonObj[i].zdf + "</td>";
-                    temphtml += "<td>" + jsonObj[i].hsl + "</td>";
-                  //  temphtml += "<td><a target='_blank' href='/stock/toStockCrossIncreaseEffectNew?stockCode="+jsonObj[i].stockCode+"'>当前涨幅对后续的影响</a></td>";
-                  //  temphtml += "<td><a target='_blank' href='/stock/toStockCrossIncreaseEffectNew2?stockCode="+jsonObj[i].stockCode+"'>金叉后会涨吗</a></td>";
-                  //  temphtml += "<td><a target='_blank' href='/stock/toStockCrossDistributeMaxval?stockCode="+jsonObj[i].stockCode+"'>金叉后最高价的范围</a></td>";
+                    temphtml += "<td>"+jsonObj[i].hsl +"</td>";
+                    // temphtml += "<td><a target='_blank' href='/stock/toStockCrossIncreaseEffectNew?stockCode="+jsonObj[i].stockCode+"'>当前涨幅对后续的影响</a></td>";
+                    // temphtml += "<td><a target='_blank' href='/stock/toStockCrossIncreaseEffectNew2?stockCode="+jsonObj[i].stockCode+"'>金叉后会涨吗</a></td>";
+                    // temphtml += "<td><a target='_blank' href='/stock/toStockCrossDistributeMaxval?stockCode="+jsonObj[i].stockCode+"'>金叉后最高价的范围</a></td>";
                     temphtml += "<td>" + tempdate + "</td>";
                     temphtml += "<td><a target='_blank' href='/stock/toStockInfoList?stockCode="+jsonObj[i].stockCode+"'>综合</a></td>";
                     temphtml += "<td><a target='_blank' href='/stock/toStockMacd?stockCode="+jsonObj[i].stockCode+"'>MACD</a></td>";
-                    temphtml += "<td><a target='_blank' href='/stock/toStockPrice?stockCode="+jsonObj[i].stockCode+"'>价格</a></td>";
+                    temphtml += "<td><a target='_blank' href='/stock/toStockPrice?stockCode="+jsonObj[i].stockCode+"'>"+jsonObj[i].cci+"</a></td>";
                     temphtml += "<td><a target='_blank' href='/stock/toStockCrossEffect?stockCode="+jsonObj[i].stockCode+"'>影响</a></td>";
                     temphtml += "</tr>";
                 }
